--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^4.1.1",
     "react-scroll-to-component": "^1.0.2",
     "react-toastify": "^1.7.0",
+    "react-device-detect": "^1.11.14",
     "universal-cookie": "^2.0.8"
   }
 }
